feat(LeaderboardDialog): Added javadocs.